# my_Open_YOLO_3D

./: .gitignore  DEPENDENCIES.md  README.md  check_weights.py  convert_to_ipynb.py  environment.yml  kaggle_my_train_yolo_3d.ipynb  kaggle_my_train_yolo_3d.py  models_evaluation_protocol.md  my_train_yolo_3d.py  pyproject.toml  test_export_visualization.py  train.py
models/Mask3D/mask3d/: __init__.py
models/Mask3D/mask3d/models/: mask3d.py  res16unet.py  resnet.py
models/Mask3D/mask3d/models/modules/: common.py  resnet_block.py
models/Mask3D/mask3d/utils/: utils.py
old_scripts/: create_5frame_dataset.py  kaggle_my_train_yolo_3d.py
openyolo3d/: __init__.py  core.py  datamodule.py  module.py  networks_2d.py  networks_3d.py
openyolo3d/utils/: gt_utils.py  paths.py  weight_adapter.py
